--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "node src/app.js",
     "tailwind": "npx tailwindcss -i ./tailwind-css-input/input.css -o ./src/public/css/output.css --watch"
   },
   "keywords": [],
